 * Support non-integer scale factors with HDPI.
 * If the current theme is customized, go to its root version after it's removed by Kvantum Manager.
 * Depend on KWindowSystem (KWindowEffects) with Qt >= 5.11 to support the blur effect under Wayland too.
 * Maximum precision in drawing tree branch lines.

V0.10.8
---------
 * Try to support translucent base colors, knowing that it isn't possible in all cases.
 * Changed old-style casts to C++ ones.
 * When searching for a stylable toolbar container, search only in the direct children of the widget's window (for optimization).
 * Find exact heights of multi-line texts for all kinds of fonts by finding their bounding rectangles and without resorting to any "magic constant".
 * Added the key "spread_header" for making simple headers. Also, RTL headers are fixed.
 * Added "inactive.alt.base.color" because alternate rows are drawn by Kvantum now.
 * Corrected RTL for QToolBox (a bug in QCommonStyle).
 * Consider inactiveness in setting scrollbar background.
 * If a combo isn't styled by Kvantum anymore, don't restore its item delegate (otherwise, a rare crash might happen).
 * Fixed the header icon position with RTL layouts.
 * Merge the background of a header with that of its parent view, if any.
 * Fill the menu interior with the window background color if there isn't an interior SVG element.
 * Gave meaning to min_height/min_width under Window and Dialog sections by making them the minimum height/width of the background (interior) SVG element (useful with gradients).

V0.10.7
---------
 * Removed the workaround for Gwenview's scrollbar issue because it was potentially dangerous (actually, just in one case). Anyhow, Gwenview's bug was fixed a long time ago.
 * Cover a very rare case, where the special text of a spinbox is set when its value is minimum (which means a bad code).
 * Center menubar-item texts horizontally (they were left-aligned before).