@@ -25,6 +25,7 @@ V0.10.9
  * If the current theme is customized, go to its root version after it's removed by Kvantum Manager.
  * Depend on KWindowSystem (KWindowEffects) with Qt >= 5.11 to support the blur effect under Wayland too.
  * Maximum precision in drawing tree branch lines.
+ * Show menus of menubar items exactly below them, without a gap.
 
 V0.10.8
 ---------
